--- a/todo
+++ b/todo
@@ -1,4 +1,6 @@
 global tests:
+    - paging for large collections
+    - support for documents at base of resource
     - extend filters test to ListFields and EmbeddedDocumentFields
 
 subdocument tests:
