--- a/todo
+++ b/todo
@@ -1,3 +1,5 @@
+test
+
 global tests:
     - support for documents at base of resource
     - extend filters test to ListFields and EmbeddedDocumentFields
